Bug #1231 - Chrome, Safari: On filter lists the third filter dropdown text gets cut off

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -747,7 +747,8 @@ body{
             color: @aqua;
         }
         .customSelectInner{
-            max-width: 192px;
+            max-width: 90%;
+            min-width: 90%;
             overflow: hidden;
             white-space: nowrap;
             @media(max-width: @screen-xs-max){
